examples/ocp/http-ssl/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: selfsigned-issuer
    cert-manager.io/common-name: camel-server
    cert-manager.io/subject-organizations: my-org
    cert-manager.io/subject-organizationalunits: my-org-unit
  name: camel-http-ssl-server
spec:
  rules:
  - host: camel-server.my-domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: camel-http-ssl-server
            port:
              number: 8080
  tls:
  - hosts:
    - camel-server.my-domain
    secretName: gen-ocp-ssl-camel-server-tls
